@@ -42,12 +42,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/Task-Dicom>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2015-2016 Michal Špaček
+     © 2015-2016 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
