@@ -3,6 +3,7 @@
  - Move bugtracker to github.
  - Update Module::Install to 1.21 version.
  - Update author github username.
+ - Update author name.
 
 0.07 2016-08-25T11:30:29+02:00
  - Add Dicom::UID::Generator in 0.01 version.
